--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="game.js"></script>
 </head>
 <body>
-    <h1>Math Game</h1>
+    <h1>Mathespiel</h1>
     <div id="game-container"></div>
 </body>
 </html>
