--- a/index.html
+++ b/index.html
@@ -19,38 +19,7 @@
         #game-container {
             position: relative;
         }
-        #game-over-ui {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #393E46;
-            padding: 20px;
-            border-radius: 8px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-        }
-        #game-over-ui button {
-            margin: 10px 5px;
-            padding: 8px 15px;
-            border: none;
-            border-radius: 4px;
-            background-color: #00ADB5;
-            color: #222831;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        #game-over-ui button:hover {
-            background-color: #008FA0;
-        }
-        #username-input {
-            padding: 8px;
-            margin: 10px 0;
-            border-radius: 4px;
-            border: 1px solid #00ADB5;
-            background-color: #EEEEEE;
-            color: #222831;
-        }
+        /* Remove styles for #game-over-ui */
         #sound-toggle {
             position: absolute;
             top: 10px;
