--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             margin: 0;
-            background-color: #222831;
+            background-color: #EAD8B1;
             display: flex;
             justify-content: center;
             align-items: center;
